--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
-sonar.projectKey=aglensmith_swaggerator
+sonar.projectKey=aglensmith_swaggerator2
 sonar.organization=aglensmith
+sonar.newCode.referenceBranch=main
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=swaggerator
