--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "gen": "node src/index.js",
+    "gen": "node src/index.js >> reference/webapi.oas.json",
     "start": "http-server",
     "coverage": "jest --coverage",
     "scan": "sonar-scanner -Dsonar.login=$SQ_99_TOKEN -Dsonar.tests=./test -Dsonar.sources=./src -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info"
