--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey=aglensmith_swaggerator
-sonar.organization=aglensmith
-
+sonar.projectKey=swaggerator
+sonar.tests=test/
+sonar.sources=src/
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=swaggerator
 #sonar.projectVersion=1.0
